Add test run configurations, improve logging and code formatting